<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lay_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/signUpBg"

    tools:context="com.tridentnets.finance.activity.LoginActivity">

    <ImageView
        android:paddingTop="@dimen/dp60"
        android:paddingBottom="@dimen/dp20"
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_launcher_background" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@+id/img_logo"
        android:layout_marginLeft="@dimen/dp50"
        android:layout_marginRight="@dimen/dp50"
        android:hint="@string/email_id"
        android:textColorHint="@color/SignUpEdtTxtColor"
        android:textSize="@dimen/sp16"
        app:hintTextAppearance="@style/TextLabel"
        android:theme="@style/TextInputLayout.">

        <com.tridentnets.finance.typeface.EditTextFiraScanBook
            android:id="@+id/edt_login_emilid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"

            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"

            android:singleLine="true"
            android:textColor="@color/silver"
            android:textColorHint="@color/silver"
            android:textSize="@dimen/sp16" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/txt_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_username"
        android:layout_marginLeft="@dimen/dp50"
        android:layout_marginRight="@dimen/dp50"
        android:hint="@string/pws"
        android:textColorHint="@color/SignUpEdtTxtColor"
        android:textSize="@dimen/sp16"
        app:hintTextAppearance="@style/TextLabel"
        android:theme="@style/TextInputLayout."
        app:passwordToggleContentDescription="pwd desc"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/silver">

        <com.tridentnets.finance.typeface.EditTextFiraScanBook
android:id="@+id/edt_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textColor="@color/silver"
            android:textColorHint="@color/silver"
            android:textSize="@dimen/sp16" />
    </android.support.design.widget.TextInputLayout>

    <com.tridentnets.finance.typeface.ButtonFiraScanMedium
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_pwd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp40"
        android:background="@drawable/round_green_btn"
        android:paddingLeft="@dimen/dp15"
        android:paddingRight="@dimen/dp15"
        android:text="@string/login"
        android:textColor="@color/ufogreen"
        android:textSize="@dimen/sp16" />

    <com.tridentnets.finance.typeface.TextViewFiraScanLight
        android:id="@+id/txt_forgot_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/dp20"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="@dimen/sp18" />

    <com.tridentnets.finance.typeface.TextViewFiraScanLight
        android:id="@+id/txt_sign_in_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_forgot_pwd"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/dp10"
        android:text="@string/touch_here_for_other_sign_up_options"
        android:textAlignment="center"
        android:textColor="@color/MediumTurquoise"
        android:textSize="@dimen/sp18" />

    <com.tridentnets.finance.typeface.TextViewFiraScanMedium
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/ColorDodgerBlue"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="@string/new_user_tap_here_to_sign_up"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/sp18" />
</RelativeLayout>
