<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lay_lin_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/signUpBg"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/ScrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp40"
            android:layout_marginRight="@dimen/dp40"
            android:paddingTop="@dimen/dp40">

            <com.tridentnets.finance.typeface.TextViewFiraScanBold
                android:id="@+id/txt_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/sp26"
                android:textStyle="bold" />

            <com.tridentnets.finance.typeface.TextViewFiraScanBook
                android:id="@+id/txt_signup_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_signup"
                android:paddingBottom="@dimen/dp30"
                android:paddingTop="@dimen/dp15"
                android:text="@string/sign_up_info"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/sp16" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_signup_info"
                android:hint="@string/first_name"
                android:textColorHint="@color/SignUpEdtTxtColor"
                android:textSize="@dimen/sp16"
                app:hintTextAppearance="@style/TextLabel"
                android:theme="@style/TextInputLayout."

                >

                <com.tridentnets.finance.typeface.EditTextFiraScanBook
                    android:id="@+id/edt_fname"
                    android:textSize="@dimen/SignupEdtTxtSize"
                    android:textColor="@color/silver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:paddingTop="@dimen/dp10"
                    android:singleLine="true"
                    android:inputType="textCapSentences"

                    android:textColorHint="@color/silver" />
            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_fname"
                android:hint="@string/last_name"
                android:textColorHint="@color/SignUpEdtTxtColor"
                android:textSize="@dimen/sp16"
                app:hintTextAppearance="@style/TextLabel"
                android:theme="@style/TextInputLayout.">


            <com.tridentnets.finance.typeface.EditTextFiraScanBook
                android:id="@+id/edt_lname"
                android:textSize="@dimen/SignupEdtTxtSize"
                android:textColor="@color/silver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_lname"
                android:hint="@string/email_address"
                android:textColorHint="@color/SignUpEdtTxtColor"
                android:textSize="@dimen/sp16"
                app:hintTextAppearance="@style/TextLabel"
                android:theme="@style/TextInputLayout.">


            <com.tridentnets.finance.typeface.EditTextFiraScanBook
                android:id="@+id/edt_email"
                android:inputType="textEmailAddress|textCapSentences"
                android:textSize="@dimen/SignupEdtTxtSize"
                android:textColor="@color/silver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <View
                android:visibility="gone"
                android:id="@+id/uline_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:layout_below="@+id/txt_email"
                android:background="@color/silver" />



            <android.support.design.widget.TextInputLayout

                android:id="@+id/txt_input_lay_edt_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/uline_email"

                android:textColorHint="@color/SignUpEdtTxtColor"
                app:hintTextAppearance="@style/TextLabel"
                android:theme="@style/TextInputLayout."
                app:passwordToggleContentDescription="pwd desc"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/silver">

                <com.tridentnets.finance.typeface.EditTextFiraScanBook
                    android:textSize="@dimen/SignupEdtTxtSize"
                    android:textColor="@color/silver"
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/pws"
                    app:hintTextAppearance="@style/TextLabel"
                    android:inputType="textPassword"
                    android:singleLine="true"
                  />
            </android.support.design.widget.TextInputLayout>

            <View
                android:visibility="gone"
                android:id="@+id/uline_pwd"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:layout_below="@+id/txt_input_lay_edt_pwd"
                android:background="@color/silver" />

            <com.tridentnets.finance.typeface.TextViewFiraScanBook
                android:id="@+id/txt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/uline_pwd"
                android:paddingTop="@dimen/dp20"
                android:text="@string/phone_number_optional"
                android:textColor="@color/silver"
                android:textSize="@dimen/sp16" />

            <com.tridentnets.finance.typeface.EditTextFiraScanBook
                android:id="@+id/edt_phone_code"
                android:textSize="@dimen/SignupEdtTxtSize"

                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_phone"
                android:background="@null"
                android:hint="@string/_91"
                android:textColor="@color/SignUpEdtTxtColor"
                android:paddingTop="@dimen/dp10"
                android:singleLine="true"
                android:textAlignment="center"
                android:textColorHint="@color/silver" />

            <View
                android:id="@+id/uline_phone_code"
                android:layout_width="50dp"
                android:layout_height="@dimen/dp1"
                android:layout_below="@id/edt_phone_code"
                android:background="@color/silver" />

            <com.tridentnets.finance.typeface.EditTextFiraScanBook
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/SignupEdtTxtSize"
                android:layout_below="@+id/txt_phone"
                android:layout_marginLeft="@dimen/dp10"
                android:textColor="@color/SignUpEdtTxtColor"
                android:layout_toEndOf="@id/edt_phone_code"
                android:layout_toRightOf="@id/edt_phone_code"
                android:background="@null"
                android:paddingTop="@dimen/dp10"
                android:singleLine="true" />

            <View
                android:id="@+id/uline_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:layout_below="@+id/edt_phone"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_toEndOf="@id/uline_phone_code"
                android:layout_toRightOf="@id/uline_phone_code"
                android:background="@color/silver" />

            <com.tridentnets.finance.typeface.TextViewFiraScanLight
                android:id="@+id/txt_terms_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/uline_phone"
                android:paddingBottom="@dimen/dp40"
                android:paddingTop="@dimen/dp20"
                android:text="@string/by_clicking_on_create_account"
                android:textAlignment="center"
                android:textColor="@color/silver"
                android:textSize="@dimen/sp14" />

            <com.tridentnets.finance.typeface.ButtonFiraScanMedium
                android:id="@+id/btn_create_ac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_terms_info"
                android:layout_centerHorizontal="true"
                android:background="@drawable/round_green_btn"
                android:paddingLeft="@dimen/dp15"
                android:paddingRight="@dimen/dp15"
                android:text="@string/create_account"
                android:textColor="@color/ufogreen"
                android:textSize="@dimen/sp16"

                />



        </RelativeLayout>
    </ScrollView>
    <com.tridentnets.finance.typeface.TextViewFiraScanMedium
        android:id="@+id/txt_already_signed"
        android:layout_width="match_parent"
        android:paddingTop="@dimen/dp10"
        android:paddingBottom="@dimen/dp10"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_create_ac"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/already_signed_up_tap_here_to_sign_in"
        android:textColor="@color/white"
        android:textSize="@dimen/sp16" />


</LinearLayout>


