<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/signUpBg"
    android:orientation="vertical"
    tools:context="com.tridentnets.finance.activity.OrgCreateNextStepActivity">

    <com.tridentnets.finance.typeface.TextViewFiraScanBold
        android:id="@+id/txt_org_crt_next_step_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:paddingTop="@dimen/dp30"
        android:text="Few more information to set you up"
        android:textColor="@color/white"
        android:textSize="@dimen/sp16" />

    <com.tridentnets.finance.typeface.TextViewFiraScanBook
        android:id="@+id/txt_org_crt_lable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dp20"
        android:paddingTop="@dimen/dp10"
        android:text="@string/create_your_organization_and_invite_your_team_here"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txt_org_nxt_step_org_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp60"
        android:layout_marginRight="@dimen/dp60"
        android:hint="@string/organization_name"
        android:textColorHint="@color/silver"
        android:theme="@style/TextInputLayout."
        app:hintTextAppearance="@style/TextLabel">

        <com.tridentnets.finance.typeface.EditTextFiraScanBook
            android:id="@+id/edt_org_nxt_step_org_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:singleLine="true"
            android:textColor="@color/silver"
            android:textColorHighlight="@color/silver"
            android:textColorHint="@color/silver" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txt_org_nxt_step_subdomain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_org_nxt_step_org_name"
        android:layout_marginLeft="@dimen/dp60"
        android:layout_marginRight="@dimen/dp60"
        android:hint="@string/subdomain"

        android:theme="@style/TextInputLayout."
        app:hintTextAppearance="@style/TextLabel">

        <com.tridentnets.finance.typeface.EditTextFiraScanBook
            android:id="@+id/edt_org_nxt_step_sub_domain_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:singleLine="true"
            android:textColor="@color/silver" />
    </android.support.design.widget.TextInputLayout>

    <com.tridentnets.finance.typeface.ButtonFiraScanBold
        android:id="@+id/btn_org_nxt_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp30"
        android:background="@drawable/round_green_btn"
        android:text="@string/next"
        android:textColor="@color/ufogreen" />

    <RelativeLayout
        android:id="@+id/rlay_org_creation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_org_nxt_step_subdomain"
        android:visibility="gone">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt_org_nxt_step_city"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp60"
            android:gravity="center_horizontal"
            android:hint="City (optional)"
            android:textAlignment="center"
            android:theme="@style/TextInputLayout."
            app:hintTextAppearance="@style/TextLabel">

            <com.tridentnets.finance.typeface.EditTextFiraScanBook
                android:id="@+id/edt_org_nxt_step_sub_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/silver" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt_org_nxt_step_state"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp60"
            android:layout_toRightOf="@+id/txt_org_nxt_step_city"
            android:gravity="center_horizontal"
            android:hint="State (optional)"

            android:textAlignment="center"
            android:theme="@style/TextInputLayout."
            app:hintTextAppearance="@style/TextLabel">

            <com.tridentnets.finance.typeface.EditTextFiraScanBook
                android:id="@+id/edt_org_nxt_step_sub_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/silver" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt_org_nxt_step_contry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_org_nxt_step_city"
            android:layout_marginLeft="@dimen/dp60"
            android:layout_marginRight="@dimen/dp60"
            android:gravity="center_horizontal"
            android:hint="Country"
            android:textAlignment="center"
            android:theme="@style/TextInputLayout."
            app:hintTextAppearance="@style/TextLabel">

            <com.tridentnets.finance.typeface.EditTextFiraScanBook
                android:id="@+id/edt_org_nxt_step_sub_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:inputType="textCapSentences"
                android:singleLine="true"
                android:textColor="@color/silver" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt_org_nxt_step_ph_code"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_org_nxt_step_contry"
            android:layout_marginLeft="@dimen/dp60"
            android:gravity="center_horizontal"
            android:hint="+91"
            android:textAlignment="center"
            android:theme="@style/TextInputLayout."
            app:hintTextAppearance="@style/TextLabel">

            <com.tridentnets.finance.typeface.EditTextFiraScanBook
                android:id="@+id/edt_org_nxt_step_sub_phone_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/silver" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt_org_nxt_step_phone_number"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/txt_org_nxt_step_contry"
            android:layout_marginRight="@dimen/dp60"
            android:layout_toRightOf="@+id/txt_org_nxt_step_ph_code"
            android:gravity="center_horizontal"
            android:hint="phone Number"
            android:paddingBottom="@dimen/dp40"
            android:paddingLeft="10dp"
            android:textAlignment="center"
            android:theme="@style/TextInputLayout."
            app:hintTextAppearance="@style/TextLabel">

            <com.tridentnets.finance.typeface.EditTextFiraScanBook
                android:id="@+id/edt_org_nxt_step_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@color/silver" />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

    <com.tridentnets.finance.typeface.TextViewFiraScanBold
        android:id="@+id/txt_org_nxt_step_move_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/dp10"
        android:text="Go to Login"
        android:textColor="@color/ufogreen"
        android:visibility="gone" />


</LinearLayout>
